Fixed /list endpoint